# ai_tg_bot_management

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3759928ce789_init.py  6ac0fa3c754c_add_modelresponses.py  9b22cbd2ef31_change_created_at_and_updated_at.py  ea0820a5844f_add_adminuser.py
src/: config.py  management.py  metrics.py  routes.py  runtime.py  ws_manager.py
src/adapters/: kafka_consumer.py
src/admin/: routes.py  setup.py  views.py
src/auth/: admin_backend.py  csrf.py  passwords.py
src/db/click_house/: client.py
src/db/postgres/: config.py  models.py
src/repositories/click_house/: analytics.py
src/repositories/postgres/: admin_users.py  admin_users_repo.py  model_responses.py  model_responses_repo.py  uow.py
src/services/: admin_user_service.py
src/templates/: dashboard.html  login_admin.html
